--- a/styles/scss/_utils.scss
+++ b/styles/scss/_utils.scss
@@ -76,6 +76,7 @@
   &:hover,
   &:focus {
     border-bottom: 2px solid $text;
+    cursor: pointer;
   }
 }
 
